--- a/app/src/main/res/layout/activity_form_list.xml
+++ b/app/src/main/res/layout/activity_form_list.xml
@@ -9,51 +9,60 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        android:layout_margin="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardBackgroundColor="@color/colorWhite"
         android:minHeight="50dp"
         android:maxHeight="590dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="50dp">
+            android:layout_marginBottom="50dp"
+            android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
                 android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:orientation="horizontal">
+
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="1.0"
                     android:text="@string/title"
                     android:textAlignment="center"
-                    android:layout_weight="1.0"
-                    android:textStyle="bold"
-                    android:textSize="30dp"/>
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="1.0"
                     android:text="@string/digest"
                     android:textAlignment="center"
-                    android:layout_weight="1.0"
-                    android:textStyle="bold"
-                    android:textSize="30dp"/>
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="1.0"
                     android:text="@string/time"
                     android:textAlignment="center"
-                    android:layout_weight="1.0"
-                    android:textStyle="bold"
-                    android:textSize="30dp"/>
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
             </LinearLayout>
+
             <ListView
                 android:id="@+id/form_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                ></ListView>
+                android:layout_height="wrap_content"></ListView>
         </LinearLayout>
     </android.support.v7.widget.CardView>
     <android.support.design.widget.FloatingActionButton
@@ -63,7 +72,7 @@
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginRight="10dp"
         android:src="@drawable/add"/>
 </android.support.constraint.ConstraintLayout>
