--- a/app/src/main/res/layout/activity_form_create.xml
+++ b/app/src/main/res/layout/activity_form_create.xml
@@ -15,6 +15,7 @@
         android:textSize="30dp"/>
     <android.support.v7.widget.CardView
         app:layout_constraintTop_toBottomOf="@+id/form_create_title"
+        android:id="@+id/form_create_basic_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="30dp"
@@ -37,4 +38,33 @@
                 android:text="@string/form_detail_status"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
+    <ListView
+        android:id="@+id/form_create_material_list"
+        app:layout_constraintTop_toBottomOf="@+id/form_create_basic_info"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="40dp"
+        android:layout_height="wrap_content"></ListView>
+    <LinearLayout
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/form_create_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/form_create_cancel"
+            android:background="@color/yellow"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/form_create_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/green"
+            android:text="@string/form_create_complete"
+            />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
