--- a/app/src/main/res/layout/activity_form_create.xml
+++ b/app/src/main/res/layout/activity_form_create.xml
@@ -38,9 +38,40 @@
                 android:text="@string/form_detail_status"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
+    <LinearLayout
+        app:layout_constraintTop_toBottomOf="@+id/form_create_basic_info"
+        android:id="@+id/form_create_table_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/table_head_name"
+            android:layout_weight="1.0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:text="@string/form_detail_table_head_material_name"/>
+        <TextView
+            android:id="@+id/table_head_size"
+            android:layout_weight="1.0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:text="@string/form_detail_table_head_material_size"/>
+        <TextView
+            android:id="@+id/table_head_operation"
+            android:layout_weight="1.0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:text="@string/form_detail_table_head_material_get_number"/>
+    </LinearLayout>
     <ListView
         android:id="@+id/form_create_material_list"
-        app:layout_constraintTop_toBottomOf="@+id/form_create_basic_info"
+        app:layout_constraintTop_toBottomOf="@+id/form_create_table_title"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_marginBottom="40dp"
