--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -142,7 +142,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:background="@drawable/circle_input"
-                    android:hint="@string/prompt_phone"
+                    android:hint="@string/prompt_account"
                     android:inputType="phone"
                     android:maxLines="1"
                     android:singleLine="true" />
