--- a/app/src/main/res/layout/fragment_massage_remind.xml
+++ b/app/src/main/res/layout/fragment_massage_remind.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".MassageRemind">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/message_remind_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+
+    </ListView>
 
 </FrameLayout>
