--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -27,7 +27,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1">
                 <ImageView
-                    android:id="@+id/material_apply"
+                    android:id="@+id/material_purchase"
                     android:src="@drawable/material_purchase"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
                 android:layout_weight="1">
 
                 <ImageView
-                    android:id="@+id/meterial_get"
+                    android:id="@+id/meterial_out_warehouse"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -136,7 +136,7 @@
                     android:src="@drawable/material_info"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/mateial_info"
+                    android:id="@+id/material_info"
                     android:layout_marginRight="10dp"
                     android:layout_gravity="center"
                     android:layout_weight="3"
