--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -27,8 +27,8 @@
                 android:layout_gravity="center"
                 android:layout_weight="1">
                 <ImageView
-                    android:id="@+id/material_purchase"
-                    android:src="@drawable/material_purchase"
+                    android:id="@+id/material_in_warehouse"
+                    android:src="@drawable/in_warehouse"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:padding="5dp"
@@ -37,7 +37,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/material_purchase_apply"
+                    android:text="@string/material_in_warehouse"
                     android:layout_gravity="center"/>
             </LinearLayout>
             <LinearLayout
@@ -46,7 +46,6 @@
                 android:orientation="vertical"
                 android:layout_gravity="center"
                 android:layout_weight="1">
-
                 <ImageView
                     android:id="@+id/meterial_out_warehouse"
                     android:layout_width="150dp"
@@ -79,10 +78,10 @@
                 android:layout_weight="1"
                 android:layout_gravity="center">
                 <ImageView
-                    android:src="@drawable/in_warehouse"
+                    android:src="@drawable/pick_material"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/material_in_warehouse"
+                    android:id="@+id/material_picking"
                     android:layout_marginRight="10dp"
                     android:layout_gravity="center"
                     android:layout_weight="3"
@@ -90,7 +89,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/material_in_warehouse"
+                    android:text="@string/material_picking"
                     android:layout_gravity="center"/>
             </LinearLayout>
             <LinearLayout
@@ -145,6 +144,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/material_information"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center">
+                <ImageView
+                    android:src="@drawable/material_purchase"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/material_purchase"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:padding="5dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/material_purchase_apply"
                     android:layout_gravity="center"/>
             </LinearLayout>
         </LinearLayout>
