--- a/app/src/main/res/layout/activity_form_detail.xml
+++ b/app/src/main/res/layout/activity_form_detail.xml
@@ -96,12 +96,12 @@
         android:id="@+id/form_detail_turn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:fabSize="normal"
+        app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="30dp"
         android:layout_marginRight="10dp"
-        android:src="@drawable/add"/>
+        android:src="@drawable/go_return"/>
     <Button
         android:id="@+id/pass"
         app:layout_constraintBottom_toBottomOf="parent"
