--- a/app/src/main/res/layout/message_remind_list_view.xml
+++ b/app/src/main/res/layout/message_remind_list_view.xml
@@ -7,37 +7,36 @@
     android:orientation="horizontal">
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         app:cardCornerRadius="6dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
             <LinearLayout
                 android:layout_weight="4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
                 <TextView
                     android:layout_weight="2"
                     android:id="@+id/message_remind_list_message_title"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="0dp" />
                 <TextView
                     android:layout_weight="1"
                     android:id="@+id/message_remind_list_message_abstract"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="0dp" />
             </LinearLayout>
             <TextView
                 android:layout_weight="1"
                 android:id="@+id/message_remind_list_message_time"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
