--- a/app/src/main/res/layout/form_create_list_content.xml
+++ b/app/src/main/res/layout/form_create_list_content.xml
@@ -14,16 +14,19 @@
             android:id="@+id/form_create_list_content_show_material"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:textAlignment="center"
             android:layout_weight="1"></TextView>
         <TextView
             android:id="@+id/form_create_list_content_show_size"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:textAlignment="center"
             android:layout_weight="1"></TextView>
         <TextView
             android:id="@+id/form_create_list_content_show_number"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:textAlignment="center"
             android:layout_weight="1"/>
     </LinearLayout>
 </LinearLayout>
