--- a/app/src/main/res/layout/list_content.xml
+++ b/app/src/main/res/layout/list_content.xml
@@ -15,7 +15,7 @@
         android:textAlignment="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <EditText
+    <TextView
         android:id="@+id/list_content_number"
         android:layout_weight="1"
         android:textAlignment="center"
