--- a/app/src/main/res/layout/form_list_list_view_content.xml
+++ b/app/src/main/res/layout/form_list_list_view_content.xml
@@ -8,27 +8,27 @@
         android:layout_weight="1"
         android:textAlignment="center"
         android:textSize="15dp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/form_list_list_view_table_name"
         android:layout_weight="1"
         android:textAlignment="center"
         android:textSize="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_width="0dp" />
     <TextView
         android:id="@+id/form_list_list_view_creator"
         android:layout_weight="1"
         android:textSize="15dp"
         android:textAlignment="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_width="0dp" />
     <TextView
         android:id="@+id/form_list_list_view_create_time"
         android:layout_weight="1"
         android:textSize="15dp"
         android:textAlignment="center"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content" />
 </LinearLayout>
