--- a/app/src/main/res/layout/activity_form_create.xml
+++ b/app/src/main/res/layout/activity_form_create.xml
@@ -73,6 +73,12 @@
             android:textAlignment="center"
             android:textStyle="bold"
             android:text="@string/form_detail_table_head_material_get_number"/>
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="操作"
+            android:textAlignment="center"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
