--- a/app/src/main/res/layout/activity_form_list.xml
+++ b/app/src/main/res/layout/activity_form_list.xml
@@ -6,12 +6,54 @@
     android:layout_height="match_parent"
     tools:context=".FormList">
 
+    <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/searchLine"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:orientation="horizontal"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        >
+        <EditText
+            android:id="@+id/queryProjectName"
+            android:layout_gravity="center"
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:hint="选择工程名"
+            android:textAlignment="center"
+            android:background="@drawable/editbox"
+            android:padding="3dp"
+            android:layout_margin="1dp"/>
+        <EditText
+            android:id="@+id/queryCreator"
+            android:layout_gravity="center"
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:padding="3dp"
+            android:hint="创建者"
+            android:background="@drawable/editbox"
+            android:textAlignment="center"
+            android:layout_margin="1dp"
+            />
+        <ImageButton
+            android:id="@+id/verifyQuery"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:background="@color/pureWhite"
+            android:src="@drawable/blue_search"/>
+    </LinearLayout>
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         android:layout_margin="8dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchLine"
         app:cardBackgroundColor="@color/colorWhite"
         android:minHeight="50dp"
         android:maxHeight="590dp">
