--- a/app/src/main/res/layout/form_create_list_content.xml
+++ b/app/src/main/res/layout/form_create_list_content.xml
@@ -15,24 +15,25 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:textAlignment="center"
-            android:layout_weight="1"></TextView>
+            android:layout_weight="3"></TextView>
         <TextView
             android:id="@+id/form_create_list_content_show_size"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:textAlignment="center"
-            android:layout_weight="1"></TextView>
+            android:layout_weight="3"></TextView>
         <TextView
             android:id="@+id/form_create_list_content_show_number"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:textAlignment="center"
-            android:layout_weight="1"/>
-        <Button
+            android:layout_weight="3"/>
+        <ImageButton
             android:id="@+id/form_create_list_content_delete"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="删除"/>
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/blue_remove"
+            android:scaleType="centerCrop"
+            android:background="@color/pureWhite" />
     </LinearLayout>
 </LinearLayout>
