--- a/app/src/main/res/layout/form_create_list_content.xml
+++ b/app/src/main/res/layout/form_create_list_content.xml
@@ -15,13 +15,13 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:textAlignment="center"
-            android:layout_weight="3"></TextView>
+            android:layout_weight="3" />
         <TextView
             android:id="@+id/form_create_list_content_show_size"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:textAlignment="center"
-            android:layout_weight="3"></TextView>
+            android:layout_weight="3" />
         <TextView
             android:id="@+id/form_create_list_content_unit"
             android:layout_width="0dp"
